feature: added documentation for verification.verify route
